[package]
name = "rayonzip"
version = "0.2.1"
edition = "2021"
description = "Make zip archives with concurrent compression using rayon"
license = "MIT"
documentation = "https://docs.rs/rayonzip"
repository = "https://github.com/JohnTheCoolingFan/rayonzip"
categories = ["compression", "concurrency"]
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
rayon = "1.6"
